--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/lodash-es": "^4.17.9",
     "@types/node": "^18.17.17",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
@@ -29,9 +30,11 @@
     "@vue-macros/volar": "^0.16.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^22.1.0",
     "npm-run-all2": "^6.0.6",
     "postcss-color-mix": "^1.1.0",
     "postcss-each": "^1.1.0",
@@ -43,6 +46,7 @@
     "unplugin-vue-macros": "^2.6.1",
     "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.11"
   }
 }
