--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lyz-element",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -19,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@popperjs/core": "^2.11.8",
+    "async-validator": "^4.2.5",
     "lodash-es": "^4.17.21",
     "vue": "^3.3.4"
   },
@@ -39,6 +41,7 @@
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.0.6",
